fix nav bar color contrast
change background to black

--- a/frontend/src/stylesheets/datePicker.css
+++ b/frontend/src/stylesheets/datePicker.css
@@ -20,3 +20,6 @@
 .react-datepicker__month-text:hover {
   background-color: #534cea;
 }
+
+.react-date-picker__calendar-button {
+}
